[gd_scene load_steps=23 format=3 uid="uid://cu8h487obshij"]

[ext_resource type="Script" path="res://scripts/mobs/death_mob.gd" id="1_lbmig"]
[ext_resource type="Script" path="res://scripts/character_components/shooter_ray.gd" id="2_knkgr"]
[ext_resource type="Script" path="res://scripts/character_components/move.gd" id="2_rc17y"]
[ext_resource type="Texture2D" uid="uid://bg18ums5tplhl" path="res://assets/Undead Survivor/Sprites/death.png" id="3_mxx15"]
[ext_resource type="Script" path="res://scripts/character_components/shooter.gd" id="4_7vkq1"]
[ext_resource type="PackedScene" uid="uid://r5t6udk2o024" path="res://scenes/utils/damage_area_2d.tscn" id="5_k2152"]

[sub_resource type="Resource" id="Resource_ltqeu"]
script = ExtResource("2_knkgr")
frequency = 1.0
bullet_speed = 500.0
bullet_lifetime = 10.0
deviation = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_echa5"]
atlas = ExtResource("3_mxx15")
region = Rect2(19, 63, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_a22c7"]
atlas = ExtResource("3_mxx15")
region = Rect2(38, 63, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7cy6"]
atlas = ExtResource("3_mxx15")
region = Rect2(0, 42, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dor4t"]
atlas = ExtResource("3_mxx15")
region = Rect2(19, 42, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh6u5"]
atlas = ExtResource("3_mxx15")
region = Rect2(38, 42, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_2svv8"]
atlas = ExtResource("3_mxx15")
region = Rect2(0, 63, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dtd"]
atlas = ExtResource("3_mxx15")
region = Rect2(0, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqgku"]
atlas = ExtResource("3_mxx15")
region = Rect2(19, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_85bun"]
atlas = ExtResource("3_mxx15")
region = Rect2(38, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqafg"]
atlas = ExtResource("3_mxx15")
region = Rect2(0, 21, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfles"]
atlas = ExtResource("3_mxx15")
region = Rect2(19, 21, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6h0"]
atlas = ExtResource("3_mxx15")
region = Rect2(38, 21, 19, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_gy5yk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_echa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a22c7")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7cy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dor4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh6u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2svv8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0dtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqgku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqafg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfles")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6h0")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50gcs"]
radius = 90.0
height = 196.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bmp3u"]
radius = 167.0
height = 344.0

[node name="DeathMob" type="Node2D"]
script = ExtResource("1_lbmig")
number_of_bullets = 16
bullet_ref = SubResource("Resource_ltqeu")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("2_rc17y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
z_index = -1
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_gy5yk")
animation = &"die"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(1, 12)
shape = SubResource("CapsuleShape2D_50gcs")

[node name="Shooter" type="Node2D" parent="CharacterBody2D"]
unique_name_in_owner = true
script = ExtResource("4_7vkq1")
active = true
auto_init = false

[node name="FakeTarget" type="Node2D" parent="CharacterBody2D/Shooter"]
unique_name_in_owner = true
position = Vector2(100, 0)

[node name="DamageArea2D" parent="CharacterBody2D" instance=ExtResource("5_k2152")]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DamageArea2D"]
shape = SubResource("CapsuleShape2D_bmp3u")

[connection signal="on_enter" from="CharacterBody2D/DamageArea2D" to="." method="_on_damage_area_2d_on_enter"]
